# continuo-validation-runners

./: .gitignore  CLAUDE.md  README.md  docker-compose.integration.yml  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml  publish.yml
adapters/postgres/: Dockerfile  README.md  pyproject.toml
adapters/postgres/continuo_validation_postgres/: __init__.py  adapter.py
adapters/postgres/tests/: test_adapter.py  test_image_smoke.py  test_integration_postgres.py
core/: README.md  pyproject.toml
core/continuo_validation_core/: __init__.py  __main__.py  port.py  result.py  runner.py  s3.py
core/tests/: test_port.py  test_result.py  test_runner.py  test_s3.py
docker/: validation_runner_shim.py
postgres/: README.md  pyproject.toml
postgres/continuo_validation_postgres/: adapter.py
postgres/tests/: test_adapter.py  test_adapter_postgres.py  test_integration_postgres.py
trino/: README.md  pyproject.toml
trino/continuo_validation_trino/: __init__.py  adapter.py
trino/testinfra/catalog/: iceberg.properties
trino/tests/: test_adapter.py  test_integration_trino.py
