# Virtual uv workspace root: no [project] — packages live in core/ and adapters/*.
# Tool configuration is defined once here for the whole monorepo.
[tool.uv.workspace]
members = ["core", "adapters/*"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["I", "D"]
ignore = ["D104"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"
indent-style = "space"

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
known-first-party = ["continuo_validation_core", "continuo_validation_postgres"]
lines-between-types = 1

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.pytest.ini_options]
# importlib import-mode: core/tests and adapters/*/tests are each their own
# `tests` package (both carry __init__.py); the default "prepend" mode collides
# on that shared name whenever both are collected in one run. importlib mode
# keys modules by file path instead, so per-package `tests` dirs stay distinct.
addopts = "--tb=short --import-mode=importlib"
markers = [
    "integration: needs the docker-compose.integration.yml stack running",
    "image: needs the locally built validation-runner image and the integration stack",
]
