# Virtual uv workspace root: no [project] — each engine library is a top-level
# folder (e.g. postgres/). Tool configuration is defined once here for the
# whole monorepo.
[tool.uv.workspace]
members = ["postgres"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["I", "D"]
ignore = ["D104"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"
indent-style = "space"

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
known-first-party = ["continuo_validation_postgres"]
lines-between-types = 1

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.pytest.ini_options]
# importlib import-mode: each engine library's tests/ is its own `tests`
# package (carries __init__.py); the default "prepend" mode would collide on
# that shared name once a second library is added to the workspace. importlib
# mode keys modules by file path instead, so per-package `tests` dirs stay
# distinct.
addopts = "--tb=short --import-mode=importlib"
markers = [
    "integration: needs the docker-compose.integration.yml stack running",
]
