# Virtual uv workspace root: no [project] — each engine library is a top-level
# folder (e.g. postgres/). Tool configuration is defined once here for the
# whole monorepo.
[tool.uv.workspace]
members = ["postgres", "trino"]

# continuo-validation-contract is not on real PyPI yet (reshape pre-release), so it
# is pulled from an EXPLICIT TestPyPI index scoped to that package only. Everything
# else (psycopg2-binary, boto3, sqlglot, tooling) resolves from real PyPI and keeps
# its platform wheels — no blanket extra-index that would drag a sdist-only TestPyPI
# copy of psycopg2-binary. Remove this block once the contract is on real PyPI.
[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
explicit = true

[tool.uv.sources]
continuo-validation-contract = { index = "testpypi" }

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["I", "D"]
ignore = ["D104"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"
indent-style = "space"

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
known-first-party = ["continuo_validation_postgres", "continuo_validation_trino"]
lines-between-types = 1

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.pytest.ini_options]
# importlib import-mode: each engine library's tests/ is its own `tests`
# package (carries __init__.py). Even in importlib mode, two files with the
# SAME basename in different `tests` packages resolve to one module name
# (tests.<basename>) and the second silently collects the first's functions —
# so every test module basename must be unique across libraries
# (test_adapter_<lib>.py, test_integration_<lib>.py). Dropping the
# __init__.py files instead is not an option: pytest's parent-module
# insertion would then claim the top-level `trino/` directory name and
# shadow the installed trino DBAPI package.
addopts = "--tb=short --import-mode=importlib"
markers = [
    "integration: needs the docker-compose.integration.yml stack running",
]
