[project]
version = "0.1.0"
name = "continuo-validation-core"
description = "Engine-agnostic core of the continuo blue/green validation runner."
authors = [{ name = "Simone Carolini" }]
maintainers = [{ name = "Simone Carolini" }]
readme = "README.md"
requires-python = ">= 3.14"
dependencies = [
    "boto3==1.40.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.14",
]

[dependency-groups]
dev = [
    "ruff==0.3.0",
    "mypy==1.18.2",
]
test = [
    "pytest==9.0.3",
    "pytest-cov==4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["continuo_validation_core"]
