[project]
version = "0.1.1"
name = "continuo-validation-trino"
description = "Trino warehouse adapter for the continuo validation runner."
authors = [{ name = "Simone Carolini" }]
maintainers = [{ name = "Simone Carolini" }]
readme = "README.md"
requires-python = ">= 3.14"
dependencies = [
    "continuo-validation-contract==0.2.0",
    "trino==0.338.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.14",
]

[project.entry-points."continuo_validation.adapters"]
trino = "continuo_validation_trino.adapter:TrinoAdapter"

[dependency-groups]
dev = [
    "ruff==0.3.0",
    "mypy==1.18.2",
]
test = [
    "pytest==9.0.3",
    "pytest-cov==4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["continuo_validation_trino"]
