[project]
version = "0.1.0"
name = "continuo-validation-postgres"
description = "Postgres warehouse adapter for the continuo validation runner."
authors = [{ name = "Simone Carolini" }]
maintainers = [{ name = "Simone Carolini" }]
readme = "README.md"
requires-python = ">= 3.12"
dependencies = [
    "continuo-validation-core",
    "psycopg2-binary==2.9.11",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
]

[project.entry-points."continuo_validation.adapters"]
postgres = "continuo_validation_postgres.adapter:PostgresAdapter"

[dependency-groups]
dev = [
    "ruff==0.3.0",
    "mypy==1.18.2",
]
test = [
    "pytest==9.0.3",
    "pytest-cov==4.1.0",
    "sqlglot==30.13.0",
]

[tool.uv.sources]
continuo-validation-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["continuo_validation_postgres"]
